hphp/test/slow/php7_backported/scalar-types/strict_nested.php.expectf

Fatal error: strict_types declaration must be the very first statement in the script in %s/strict_nested.php on line 26
